syntax = "proto3";

package favorite;
option go_package = "./favorite";

message FavoriteActionReq {
  int64 ActionType = 1;
  int64 UserId = 2;
  int64 VideoId = 3;
}

message FavoriteActionResp {
}

message User{
  int64 Id = 1;
  string Name = 2;
  int64 FollowCount = 3;
  int64 FollowerCount = 4;
  bool isFollow = 5;
}

message FavoriteListReq{
  int64 UserId = 1;
}

message Video{
  int64 Id = 1;
  User Author = 2;
  string PlayUrl = 3;
  string CoverUrl = 4;
  int64 FavoriteCount = 5;
  int64 CommentCount = 6;
  bool isFavorite = 7;
  string Title = 8;
}

message FavoriteListResp{
  repeated Video VideoList = 1;
}

service Favorite {
  rpc FavoriteAction(FavoriteActionReq) returns(FavoriteActionResp);
  rpc GetFavoriteList(FavoriteListReq) returns(FavoriteListResp);
}
